Bug 379078 - Deleting or renaming a table crashes the program
Summary: Deleting or renaming a table crashes the program
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Other Linux
: HI crash
Target Milestone: 3.1
Assignee: Jarosław Staniek
URL:
Keywords:
: 381233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-22 11:31 UTC by Ian Whitfield
Modified: 2017-06-15 22:16 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1 Alpha
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Whitfield 2017-04-22 11:31:31 UTC
Delete a Table crashes the program and the Table is NOT deleted!!
Comment 1 Jarosław Staniek 2017-04-24 21:12:25 UTC
Thanks!

Confirmed, regression in 3.1 Alpha. Works OK for 3.0.x.
Comment 2 Jarosław Staniek 2017-04-29 21:55:08 UTC
I found that renaming is exactly the same issue so I updated the summary if you don't mind.
Comment 3 Jarosław Staniek 2017-04-29 23:31:48 UTC
For 3.0.x there's also bug: Kexi does change name and caption of objects when requested
Comment 4 Jarosław Staniek 2017-04-29 23:53:58 UTC
Git commit 90ee47e08e6f87427d2a8f29ee1c5049e0466200 by Jaroslaw Staniek.
Committed on 29/04/2017 at 23:32.
Pushed by staniek into branch '3.0'.

Fix: Kexi does change name and caption of objects when requested

(not working SQL)
(regression since 3.0.0)

FIXED-IN:3.0.2

M  +2    -2    src/core/kexiproject.cpp

https://commits.kde.org/kexi/90ee47e08e6f87427d2a8f29ee1c5049e0466200
Comment 5 Jarosław Staniek 2017-04-29 23:54:13 UTC
Git commit 7e783f1bc21f40fc6226c43a65990ee2bfabc41e by Jaroslaw Staniek.
Committed on 29/04/2017 at 23:53.
Pushed by staniek into branch 'master'.

Fix crash when deleting or renaming a table

It crashed when the table was not opened.

(regression since 3.1 Alpha)

M  +3    -0    src/plugins/tables/kexitablepart.cpp
M  +2    -0    src/plugins/tables/kexitablepart.h

https://commits.kde.org/kexi/7e783f1bc21f40fc6226c43a65990ee2bfabc41e
Comment 6 Jarosław Staniek 2017-04-29 23:55:16 UTC
Closing, feel free to test when the fix lands in the AppImage and reopen if needed.
Comment 7 Ian Whitfield 2017-05-15 11:34:03 UTC
Working now OK in AppImage 24 Apr
Comment 8 Jarosław Staniek 2017-05-15 12:43:37 UTC
Thanks Ian
Comment 9 Jarosław Staniek 2017-06-15 22:16:09 UTC
*** Bug 381233 has been marked as a duplicate of this bug. ***
Comment 10 Jarosław Staniek 2017-06-15 22:16:42 UTC
Workaround until 3.0.2 is released: use the AppImage version from May just for renames (https://community.kde.org/Kexi/Snapshots). Or the <= 2.9.x version.