Fix crash when deleting or renaming a table

It crashed when the table was not opened.

(regression since 3.1 Alpha)

BUG:379078